# cr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cmake  rebuild.sh
apps/catcher/: CMakeLists.txt  main.cpp
modules/core/: CMakeLists.txt
modules/core/bench/: _main.cpp
modules/core/include/cr/: basic.hpp  cdd.h  cdd_adt.hpp  dbc.hpp  geo.hpp  test.hpp
modules/core/include/cr/cdd/: basic.h  error.h  geo.h  image.h  misc.h  net.h  time.h  vec.h
modules/core/include/cr/cdd_adt/: geo_adt.hpp  image_adt.hpp  net_adt.hpp  str_adt.hpp  time_adt.hpp
modules/core/include/cr/container/: array_buffer.hpp  array_vec.hpp  fixed_vec.hpp  onemap.hpp  packet.hpp  vec_op.h  (+1 more)
modules/core/src/: cdd.cpp  cdd_adt.cpp  dbc.cpp
modules/core/src/cdd_adt/: image_adt.cpp  net_adt.cpp  str_adt.cpp
modules/core/src/container/: packet.cpp
modules/core/src/image/: color.cpp  image.cpp  image_channel.cpp
modules/core/src/system/: time.cpp
modules/core/test/: cdd_adt_ut.cpp  dbc_ut.cpp
modules/core/test/cdd_adt/: geo_adt_ut.cpp  net_adt_ut.cpp  str_adt_ut.cpp
modules/core/test/container/: array_vec_ut.cpp  fixed_vec_ut.cpp  vec_op_ut.cpp
modules/core/test/geo/: point_ut.cpp  rect_ut.cpp  size_ut.cpp
modules/core/test/image/: image_ut.cpp
modules/core/test/system/: time_ut.cpp
modules/core/test/util/: packet_ut.cpp
modules/media/: CMakeLists.txt
modules/media/bench/: image_proc_bm.cpp
modules/media/src/: geo.cpp  ica4core.cpp
modules/media/src/image/: color_convert.cpp  draw.cpp  io.cpp
modules/media/test/image/: convert_ut.cpp  io_ut.cpp
(+37 files in other folders)
